# obision-system

./: .gitignore  CHANGELOG.md  README.md  meson.build  package-lock.json  package.json
.github/: copilot-instructions.md
.github/workflows/: release.yml
data/: com.obision.ObisionSystem.desktop.in  com.obision.ObisionSystem.gresource.xml  com.obision.ObisionSystem.gschema.xml  com.obision.app.system.desktop.in  com.obision.app.system.gresource.xml  com.obision.app.system.gschema.xml  style.css
data/ui/: battery.ui  cpu.ui  disk.ui  drivers.ui  gpu.ui  main.ui  memory.ui  network.ui  resume.ui  services.ui  system-info.ui
debian/: changelog  control  copyright  rules
scripts/: build.js  release.sh
src/: main.ts
src/components/: battery.ts  cpu.ts  disk.ts  drivers.ts  gpu.ts  logs.ts  memory.ts  network.ts  processes.ts  resources.ts  resume.ts  services.ts  system-info.ts
src/components/atoms/: README.md  info-row.ts
src/interfaces/: logs.ts  network.ts  processes.ts  resume.ts
src/services/: data-service.ts  logs-service.ts  network-service.ts  processes-service.ts  resume-service.ts  settings-service.ts
